# intro_python_ativ_M3

./: README.md  pyproject.toml
gen_n_ver/: __init__.py  gerador.py  validadores.py
